finished consejeria proyects

--- a/templates/arte_cultura.html
+++ b/templates/arte_cultura.html
@@ -34,7 +34,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/cultura_picture.jpg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -52,7 +52,7 @@
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/cultura_picture.jpg" alt="Placeholder image">
               </figure>
             </div>
             <div class="card-content">
@@ -68,7 +68,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/cultura_picture.jpg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -86,7 +86,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/cultura_picture.jpg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -103,7 +103,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/cultura_picture.jpg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -121,7 +121,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/cultura_picture.jpg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -140,7 +140,7 @@
           <div class="card is-shady">
               <div class="card-image">
               <figure class="image is-4by3">
-                  <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                  <img src="../images/cultura_picture.jpg" alt="Placeholder image">
               </figure>
               </div>
               <div class="card-content">
@@ -166,7 +166,7 @@
         <div class="card">
           <div class="card-image">
             <figure class="image is-4by3">
-              <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+              <img src="../images/cultura_picture.jpg" alt="Placeholder image">
             </figure>
           </div>
           <div class="card-content">
@@ -197,7 +197,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/cultura_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -228,7 +228,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/cultura_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -259,7 +259,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/cultura_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -290,7 +290,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/cultura_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -321,7 +321,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/cultura_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -351,7 +351,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/cultura_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -381,7 +381,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/cultura_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -413,7 +413,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/cultura_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -447,7 +447,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/cultura_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -478,7 +478,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/cultura_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -509,7 +509,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/cultura_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -544,7 +544,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/cultura_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -579,7 +579,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/cultura_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -613,7 +613,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/cultura_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -646,7 +646,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/cultura_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -677,7 +677,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/cultura_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -709,7 +709,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/cultura_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -747,7 +747,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/cultura_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
