--- a/templates/bienestar_saludmental.html
+++ b/templates/bienestar_saludmental.html
@@ -34,7 +34,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/bienestar_picture.jpeg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -54,7 +54,7 @@
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/bienestar_picture.jpeg" alt="Placeholder image">
               </figure>
             </div>
             <div class="card-content">
@@ -72,7 +72,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/bienestar_picture.jpeg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -92,7 +92,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/bienestar_picture.jpeg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -111,7 +111,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/bienestar_picture.jpeg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -129,7 +129,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/bienestar_picture.jpeg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -148,7 +148,7 @@
           <div class="card is-shady">
               <div class="card-image">
               <figure class="image is-4by3">
-                  <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                  <img src="../images/bienestar_picture.jpeg" alt="Placeholder image">
               </figure>
               </div>
               <div class="card-content">
@@ -176,7 +176,7 @@
         <div class="card">
           <div class="card-image">
             <figure class="image is-4by3">
-              <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+              <img src="../images/bienestar_picture.jpeg" alt="Placeholder image">
             </figure>
           </div>
           <div class="card-content">
@@ -210,7 +210,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/bienestar_picture.jpeg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -240,7 +240,7 @@
                     <div class="card">
                     <div class="card-image">
                         <figure class="image is-4by3">
-                        <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                        <img src="../images/bienestar_picture.jpeg" alt="Placeholder image">
                         </figure>
                     </div>
                     <div class="card-content">
@@ -267,7 +267,7 @@
                     <div class="card">
                     <div class="card-image">
                         <figure class="image is-4by3">
-                        <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                        <img src="../images/bienestar_picture.jpeg" alt="Placeholder image">
                         </figure>
                     </div>
                     <div class="card-content">
@@ -299,7 +299,7 @@
                     <div class="card">
                     <div class="card-image">
                         <figure class="image is-4by3">
-                        <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                        <img src="../images/bienestar_picture.jpeg" alt="Placeholder image">
                         </figure>
                     </div>
                     <div class="card-content">
@@ -330,7 +330,7 @@
                     <div class="card">
                     <div class="card-image">
                         <figure class="image is-4by3">
-                        <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                        <img src="../images/bienestar_picture.jpeg" alt="Placeholder image">
                         </figure>
                     </div>
                     <div class="card-content">
@@ -358,7 +358,7 @@
                     <div class="card">
                     <div class="card-image">
                         <figure class="image is-4by3">
-                        <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                        <img src="../images/bienestar_picture.jpeg" alt="Placeholder image">
                         </figure>
                     </div>
                     <div class="card-content">
