--- a/templates/comunidad_inclusion.html
+++ b/templates/comunidad_inclusion.html
@@ -34,7 +34,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/comunidad_picture.jpg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -54,7 +54,7 @@
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/comunidad_picture.jpg" alt="Placeholder image">
               </figure>
             </div>
             <div class="card-content">
@@ -72,7 +72,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/comunidad_picture.jpg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -92,7 +92,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/comunidad_picture.jpg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -111,7 +111,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/comunidad_picture.jpg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -130,7 +130,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/comunidad_picture.jpg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -151,7 +151,7 @@
           <div class="card is-shady">
               <div class="card-image">
               <figure class="image is-4by3">
-                  <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                  <img src="../images/comunidad_picture.jpg" alt="Placeholder image">
               </figure>
               </div>
               <div class="card-content">
@@ -170,7 +170,7 @@
           <div class="card is-shady">
               <div class="card-image">
               <figure class="image is-4by3">
-                  <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                  <img src="../images/comunidad_picture.jpg" alt="Placeholder image">
               </figure>
               </div>
               <div class="card-content">
@@ -188,7 +188,7 @@
           <div class="card is-shady">
               <div class="card-image">
               <figure class="image is-4by3">
-                  <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                  <img src="../images/comunidad_picture.jpg" alt="Placeholder image">
               </figure>
               </div>
               <div class="card-content">
@@ -208,7 +208,7 @@
           <div class="card is-shady">
               <div class="card-image">
               <figure class="image is-4by3">
-                  <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                  <img src="../images/comunidad_picture.jpg" alt="Placeholder image">
               </figure>
               </div>
               <div class="card-content">
@@ -227,7 +227,7 @@
           <div class="card is-shady">
               <div class="card-image">
               <figure class="image is-4by3">
-                  <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                  <img src="../images/comunidad_picture.jpg" alt="Placeholder image">
               </figure>
               </div>
               <div class="card-content">
@@ -246,7 +246,7 @@
           <div class="card is-shady">
               <div class="card-image">
               <figure class="image is-4by3">
-                  <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                  <img src="../images/comunidad_picture.jpg" alt="Placeholder image">
               </figure>
               </div>
               <div class="card-content">
@@ -278,7 +278,7 @@
         <div class="card">
           <div class="card-image">
             <figure class="image is-4by3">
-              <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+              <img src="../images/comunidad_picture.jpg" alt="Placeholder image">
             </figure>
           </div>
           <div class="card-content">
@@ -313,7 +313,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/comunidad_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -346,7 +346,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/comunidad_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -375,7 +375,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/comunidad_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -406,7 +406,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/comunidad_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -437,7 +437,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/comunidad_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -467,7 +467,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/comunidad_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -500,7 +500,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/comunidad_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -530,7 +530,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/comunidad_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -561,7 +561,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/comunidad_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -593,7 +593,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/comunidad_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -622,7 +622,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/comunidad_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -657,7 +657,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/comunidad_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -692,7 +692,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/comunidad_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -726,7 +726,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/comunidad_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -759,7 +759,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/comunidad_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -790,7 +790,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/comunidad_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -822,7 +822,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/comunidad_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -860,7 +860,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/comunidad_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
