--- a/templates/deportes.html
+++ b/templates/deportes.html
@@ -34,7 +34,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/deporte_picture.jpg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -53,7 +53,7 @@
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/deporte_picture.jpg" alt="Placeholder image">
               </figure>
             </div>
             <div class="card-content">
@@ -70,7 +70,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/deporte_picture.jpg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -91,7 +91,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/deporte_picture.jpg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -109,7 +109,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/deporte_picture.jpg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -137,7 +137,7 @@
         <div class="card">
           <div class="card-image">
             <figure class="image is-4by3">
-              <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+              <img src="../images/deporte_picture.jpg" alt="Placeholder image">
             </figure>
           </div>
           <div class="card-content">
@@ -168,7 +168,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/deporte_picture.jpg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -193,7 +193,7 @@
                     <div class="card">
                     <div class="card-image">
                         <figure class="image is-4by3">
-                        <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                        <img src="../images/deporte_picture.jpg" alt="Placeholder image">
                         </figure>
                     </div>
                     <div class="card-content">
@@ -221,7 +221,7 @@
                     <div class="card">
                     <div class="card-image">
                         <figure class="image is-4by3">
-                        <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                        <img src="../images/deporte_picture.jpg" alt="Placeholder image">
                         </figure>
                     </div>
                     <div class="card-content">
@@ -247,7 +247,7 @@
                     <div class="card">
                     <div class="card-image">
                         <figure class="image is-4by3">
-                        <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                        <img src="../images/deporte_picture.jpg" alt="Placeholder image">
                         </figure>
                     </div>
                     <div class="card-content">
@@ -274,7 +274,7 @@
                     <div class="card">
                     <div class="card-image">
                         <figure class="image is-4by3">
-                        <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                        <img src="../images/deporte_picture.jpg" alt="Placeholder image">
                         </figure>
                     </div>
                     <div class="card-content">
@@ -302,7 +302,7 @@
                     <div class="card">
                     <div class="card-image">
                         <figure class="image is-4by3">
-                        <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                        <img src="../images/deporte_picture.jpg" alt="Placeholder image">
                         </figure>
                     </div>
                     <div class="card-content">
