--- a/templates/index.html
+++ b/templates/index.html
@@ -607,7 +607,7 @@
                     data-aos-easing="linear"
 
                   >
-                    <a href="templates/academia.html" class="icons">
+                    <a href="templates/comunidad_ca.html" class="icons">
                       <i style="color: #43485c" class="fas fa-people-carry fa-3x"></i>
                     </a>
                     <hr style="background-color: #43485c;"/>
@@ -620,7 +620,7 @@
                     data-aos="fade-in"
                     data-aos-easing="linear"
                   > 
-                    <a href="templates/arte_cultura.html" class="icons">
+                    <a href="templates/bienestar_ca.html" class="icons">
                       <i style="color: #43485c" class="fas fa-heartbeat fa-3x"></i>
                     </a>
                     <hr style="background-color: #43485c" />
@@ -633,7 +633,7 @@
                     data-aos="fade-in"
                     data-aos-easing="linear"
                   >
-                    <a href="templates/comunicacion.html" class="icons">
+                    <a href="templates/investigacion_ca.html" class="icons">
                       <i style="color: #43485c" class="fas fa-graduation-cap fa-3x"></i>
                     </a>
                     <hr style="background-color: #43485c" />
