--- a/templates/sustentabilidad_medioambiente.html
+++ b/templates/sustentabilidad_medioambiente.html
@@ -34,7 +34,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/ambiente_picture.jpeg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -52,7 +52,7 @@
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/ambiente_picture.jpeg" alt="Placeholder image">
               </figure>
             </div>
             <div class="card-content">
@@ -69,7 +69,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/ambiente_picture.jpeg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -88,7 +88,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/ambiente_picture.jpeg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -104,7 +104,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/ambiente_picture.jpeg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -121,7 +121,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/ambiente_picture.jpeg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -140,7 +140,7 @@
           <div class="card is-shady">
               <div class="card-image">
               <figure class="image is-4by3">
-                  <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                  <img src="../images/ambiente_picture.jpeg" alt="Placeholder image">
               </figure>
               </div>
               <div class="card-content">
@@ -158,7 +158,7 @@
           <div class="card is-shady">
               <div class="card-image">
               <figure class="image is-4by3">
-                  <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                  <img src="../images/ambiente_picture.jpeg" alt="Placeholder image">
               </figure>
               </div>
               <div class="card-content">
@@ -174,7 +174,7 @@
           <div class="card is-shady">
               <div class="card-image">
               <figure class="image is-4by3">
-                  <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                  <img src="../images/ambiente_picture.jpeg" alt="Placeholder image">
               </figure>
               </div>
               <div class="card-content">
@@ -192,7 +192,7 @@
           <div class="card is-shady">
               <div class="card-image">
               <figure class="image is-4by3">
-                  <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                  <img src="../images/ambiente_picture.jpeg" alt="Placeholder image">
               </figure>
               </div>
               <div class="card-content">
@@ -210,7 +210,7 @@
           <div class="card is-shady">
               <div class="card-image">
               <figure class="image is-4by3">
-                  <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                  <img src="../images/ambiente_picture.jpeg" alt="Placeholder image">
               </figure>
               </div>
               <div class="card-content">
@@ -227,7 +227,7 @@
           <div class="card is-shady">
               <div class="card-image">
               <figure class="image is-4by3">
-                  <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                  <img src="../images/ambiente_picture.jpeg" alt="Placeholder image">
               </figure>
               </div>
               <div class="card-content">
@@ -258,7 +258,7 @@
         <div class="card">
           <div class="card-image">
             <figure class="image is-4by3">
-              <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+              <img src="../images/ambiente_picture.jpeg" alt="Placeholder image">
             </figure>
           </div>
           <div class="card-content">
@@ -304,7 +304,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/ambiente_picture.jpeg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -338,7 +338,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/ambiente_picture.jpeg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -367,7 +367,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/ambiente_picture.jpeg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -399,7 +399,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/ambiente_picture.jpeg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -428,7 +428,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/ambiente_picture.jpeg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -459,7 +459,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/ambiente_picture.jpeg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -491,7 +491,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/ambiente_picture.jpeg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -523,7 +523,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/ambiente_picture.jpeg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -557,7 +557,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/ambiente_picture.jpeg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -587,7 +587,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/ambiente_picture.jpeg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -618,7 +618,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/ambiente_picture.jpeg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -653,7 +653,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/ambiente_picture.jpeg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -688,7 +688,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/ambiente_picture.jpeg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -722,7 +722,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/ambiente_picture.jpeg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -755,7 +755,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/ambiente_picture.jpeg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -786,7 +786,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/ambiente_picture.jpeg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -818,7 +818,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/ambiente_picture.jpeg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -856,7 +856,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/ambiente_picture.jpeg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
