--- a/templates/comunicacion.html
+++ b/templates/comunicacion.html
@@ -34,7 +34,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/comunicacion_picture.jpeg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -53,7 +53,7 @@
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/comunicacion_picture.jpeg" alt="Placeholder image">
               </figure>
             </div>
             <div class="card-content">
@@ -71,7 +71,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/comunicacion_picture.jpeg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -92,7 +92,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/comunicacion_picture.jpeg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -109,7 +109,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/comunicacion_picture.jpeg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -128,7 +128,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/comunicacion_picture.jpeg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -149,7 +149,7 @@
           <div class="card is-shady">
               <div class="card-image">
               <figure class="image is-4by3">
-                  <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                  <img src="../images/comunicacion_picture.jpeg" alt="Placeholder image">
               </figure>
               </div>
               <div class="card-content">
@@ -177,7 +177,7 @@
         <div class="card">
           <div class="card-image">
             <figure class="image is-4by3">
-              <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+              <img src="../images/comunicacion_picture.jpeg" alt="Placeholder image">
             </figure>
           </div>
           <div class="card-content">
@@ -211,7 +211,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/comunicacion_picture.jpeg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -241,7 +241,7 @@
                     <div class="card">
                     <div class="card-image">
                         <figure class="image is-4by3">
-                        <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                        <img src="../images/comunicacion_picture.jpeg" alt="Placeholder image">
                         </figure>
                     </div>
                     <div class="card-content">
@@ -270,7 +270,7 @@
                     <div class="card">
                     <div class="card-image">
                         <figure class="image is-4by3">
-                        <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                        <img src="../images/comunicacion_picture.jpeg" alt="Placeholder image">
                         </figure>
                     </div>
                     <div class="card-content">
@@ -302,7 +302,7 @@
                     <div class="card">
                     <div class="card-image">
                         <figure class="image is-4by3">
-                        <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                        <img src="../images/comunicacion_picture.jpeg" alt="Placeholder image">
                         </figure>
                     </div>
                     <div class="card-content">
@@ -330,7 +330,7 @@
                     <div class="card">
                     <div class="card-image">
                         <figure class="image is-4by3">
-                        <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                        <img src="../images/comunicacion_picture.jpeg" alt="Placeholder image">
                         </figure>
                     </div>
                     <div class="card-content">
@@ -358,7 +358,7 @@
                     <div class="card">
                     <div class="card-image">
                         <figure class="image is-4by3">
-                        <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                        <img src="../images/comunicacion_picture.jpeg" alt="Placeholder image">
                         </figure>
                     </div>
                     <div class="card-content">
