--- a/templates/postgrado.html
+++ b/templates/postgrado.html
@@ -34,7 +34,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/postgrado_picture.jpeg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -54,7 +54,7 @@
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/postgrado_picture.jpeg" alt="Placeholder image">
               </figure>
             </div>
             <div class="card-content">
@@ -72,7 +72,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/postgrado_picture.jpeg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -93,7 +93,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/postgrado_picture.jpeg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -112,7 +112,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/postgrado_picture.jpeg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -141,7 +141,7 @@
         <div class="card">
           <div class="card-image">
             <figure class="image is-4by3">
-              <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+              <img src="../images/postgrado_picture.jpeg" alt="Placeholder image">
             </figure>
           </div>
           <div class="card-content">
@@ -173,7 +173,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/postgrado_picture.jpeg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -204,7 +204,7 @@
                     <div class="card">
                     <div class="card-image">
                         <figure class="image is-4by3">
-                        <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                        <img src="../images/postgrado_picture.jpeg" alt="Placeholder image">
                         </figure>
                     </div>
                     <div class="card-content">
@@ -233,7 +233,7 @@
                     <div class="card">
                     <div class="card-image">
                         <figure class="image is-4by3">
-                        <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                        <img src="../images/postgrado_picture.jpeg" alt="Placeholder image">
                         </figure>
                     </div>
                     <div class="card-content">
@@ -263,7 +263,7 @@
                     <div class="card">
                     <div class="card-image">
                         <figure class="image is-4by3">
-                        <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                        <img src="../images/postgrado_picture.jpeg" alt="Placeholder image">
                         </figure>
                     </div>
                     <div class="card-content">
@@ -300,7 +300,7 @@
                     <div class="card">
                     <div class="card-image">
                         <figure class="image is-4by3">
-                        <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                        <img src="../images/postgrado_picture.jpeg" alt="Placeholder image">
                         </figure>
                     </div>
                     <div class="card-content">
@@ -326,7 +326,7 @@
                     <div class="card">
                     <div class="card-image">
                         <figure class="image is-4by3">
-                        <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                        <img src="../images/postgrado_picture.jpeg" alt="Placeholder image">
                         </figure>
                     </div>
                     <div class="card-content">
