--- a/templates/proyectos.html
+++ b/templates/proyectos.html
@@ -34,7 +34,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/ing3_picture.jpeg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -53,7 +53,7 @@
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/ing3_picture.jpeg" alt="Placeholder image">
               </figure>
             </div>
             <div class="card-content">
@@ -70,7 +70,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/ing3_picture.jpeg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -90,7 +90,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/ing3_picture.jpeg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -108,7 +108,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/ing3_picture.jpeg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -126,7 +126,7 @@
             <div class="card is-shady">
                 <div class="card-image">
                 <figure class="image is-4by3">
-                    <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                    <img src="../images/ing3_picture.jpeg" alt="Placeholder image">
                 </figure>
                 </div>
                 <div class="card-content">
@@ -153,7 +153,7 @@
         <div class="card">
           <div class="card-image">
             <figure class="image is-4by3">
-              <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+              <img src="../images/ing3_picture.jpeg" alt="Placeholder image">
             </figure>
           </div>
           <div class="card-content">
@@ -184,7 +184,7 @@
             <div class="card">
             <div class="card-image">
                 <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                <img src="../images/ing3_picture.jpeg" alt="Placeholder image">
                 </figure>
             </div>
             <div class="card-content">
@@ -215,7 +215,7 @@
                     <div class="card">
                     <div class="card-image">
                         <figure class="image is-4by3">
-                        <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                        <img src="../images/ing3_picture.jpeg" alt="Placeholder image">
                         </figure>
                     </div>
                     <div class="card-content">
@@ -243,7 +243,7 @@
                     <div class="card">
                     <div class="card-image">
                         <figure class="image is-4by3">
-                        <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                        <img src="../images/ing3_picture.jpeg" alt="Placeholder image">
                         </figure>
                     </div>
                     <div class="card-content">
@@ -273,7 +273,7 @@
                     <div class="card">
                     <div class="card-image">
                         <figure class="image is-4by3">
-                        <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                        <img src="../images/ing3_picture.jpeg" alt="Placeholder image">
                         </figure>
                     </div>
                     <div class="card-content">
@@ -300,7 +300,7 @@
                     <div class="card">
                     <div class="card-image">
                         <figure class="image is-4by3">
-                        <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                        <img src="../images/ing3_picture.jpeg" alt="Placeholder image">
                         </figure>
                     </div>
                     <div class="card-content">
@@ -327,7 +327,7 @@
                     <div class="card">
                     <div class="card-image">
                         <figure class="image is-4by3">
-                        <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
+                        <img src="../images/ing3_picture.jpeg" alt="Placeholder image">
                         </figure>
                     </div>
                     <div class="card-content">
